--- a/info.yaml
+++ b/info.yaml
@@ -56,7 +56,7 @@ pinout:
   # Analog pins - make sure to also set "analog_pins" above, else the pins won't be connected
   ua[0]: "out"
   ua[1]: "in"
-  ua[2]: ""
+  ua[2]: "vdd_l"
   ua[3]: ""
   ua[4]: ""
   ua[5]: ""
